--- a/src/app/features/new-workout/exercise-picker/exercise-picker.component.css
+++ b/src/app/features/new-workout/exercise-picker/exercise-picker.component.css
@@ -1,16 +1,27 @@
 .filter-container {
   width: 100%;
   height: 100px;
-  background-color: #099FDF;
+  display: flex;
+  border: solid black 1px;
+  margin-top: 50px;
 }
 .exercise-container {
-  width: 100%;
+  width: 300px;
   height: 100px;
-  background-color: #df095f;
+  border-bottom: solid black 1px;
   display:flex;
+  margin: auto;
 }
 .text-center-p {
-  background-color: brown;
+  margin: auto;
   margin-left: auto;
   margin-right: auto;
+}
+.ok-button {
+  margin: auto;
+  width: 80px;
+  height: 50px;
+}
+.gray {
+  background-color: lightslategray;
 }
