--- a/src/app/features/new-workout/new-workout.component.html
+++ b/src/app/features/new-workout/new-workout.component.html
@@ -25,19 +25,27 @@
         <div class="workout-data-creation-wrapper">
 
           <div class="days-bar">
-            <button  class="day-button" (click)="setSelectedDay(i)" *ngFor="let day of this.days; index as i;">
+            <button class="day-button" (click)="setSelectedDay(i)" *ngFor="let day of this.days; index as i;">
               <input class="day-button-input" type="text" placeholder="{{day.dayName}}">
             </button>
             <button class="add-button" (click)="this.addDay()"></button>
 
           </div>
           <div *ngIf="this.days[this.selectedDay]">
-            <div *ngFor="let phase of this.days[this.selectedDay].phases" class="phase-container">
+            <div *ngFor="let phase of this.days[this.selectedDay].phases; index as i" class="phase-container">
               <div class="phase-top-Bar">
               </div>
-              <div class="exercise-container">
-                <button class="add-button margin-center" (click)="this.getRoute().navigate(['./exercises'], {relativeTo: this.getActivatedRoute()});"></button>
+              <div class="exercises-container">
+                <button class="add-button margin-center" (click)="this.goToExerciseSelector(i);"></button>
                 <p class="text-center">Add Exercise</p>
+                <div *ngIf="this.days[this.selectedDay].phases[i]">
+                  <div class="single-exercise-container" *ngFor="let exercise of this.days[this.selectedDay].phases[i].exercises">
+                  <p class="text-center" >
+                    {{exercise}}</p>
+                  </div>
+                </div>
+
+
               </div>
 
             </div>
