--- a/src/app/features/workoutoverview/workoutoverview.component.html
+++ b/src/app/features/workoutoverview/workoutoverview.component.html
@@ -17,22 +17,22 @@
           </div>
           <div class="workoutgroupsinnderdivs">
             <ng-template [ngIf]="this.getImageToShow()[0]">
-              <img [src]="this.getImageToShow()[0].image" class="img-thumbnail previewImage" *ngIf="this.getImageToShow()[0].isLoaded;">
+              <img [src]="this.getImageToShow()[0].image" class="img-thumbnail previewImage">
             </ng-template>
           </div>
           <div class="workoutgroupsinnderdivs">
             <ng-template [ngIf]="this.getImageToShow()[1]">
-              <img [src]="this.getImageToShow()[1].image" class="img-thumbnail previewImage" *ngIf="this.getImageToShow()[1].isLoaded;">
+              <img [src]="this.getImageToShow()[1].image" class="img-thumbnail previewImage">
             </ng-template>
           </div>
           <div class="workoutgroupsinnderdivs">
             <ng-template [ngIf]="this.getImageToShow()[2]">
-              <img [src]="this.getImageToShow()[2].image" class="img-thumbnail previewImage" *ngIf="this.getImageToShow()[2].isLoaded;">
+              <img [src]="this.getImageToShow()[2].image" class="img-thumbnail previewImage">
             </ng-template>
           </div>
           <div class="workoutgroupsinnderdivs">
             <ng-template [ngIf]="this.getImageToShow()[3]">
-              <img [src]="this.getImageToShow()[3].image" class="img-thumbnail previewImage" *ngIf="this.getImageToShow()[3].isLoaded;">
+              <img [src]="this.getImageToShow()[3].image" class="img-thumbnail previewImage">
             </ng-template>
           </div>
         </div>
