--- a/src/app/features/workoutoverview/workoutoverview.component.html
+++ b/src/app/features/workoutoverview/workoutoverview.component.html
@@ -16,23 +16,23 @@
             <p>Saved Workouts</p>
           </div>
           <div class="workoutgroupsinnderdivs">
-            <ng-template [ngIf]="this.getImageToShow()[0]">
-              <img [src]="this.getImageToShow()[0].image" class="img-thumbnail previewImage">
+            <ng-template [ngIf]="this.previewImages[0]">
+              <img [src]="this.previewImages[0].image" class="img-thumbnail previewImage">
             </ng-template>
           </div>
           <div class="workoutgroupsinnderdivs">
-            <ng-template [ngIf]="this.getImageToShow()[1]">
-              <img [src]="this.getImageToShow()[1].image" class="img-thumbnail previewImage">
+            <ng-template [ngIf]="this.previewImages[1]">
+              <img [src]="this.previewImages[1].image" class="img-thumbnail previewImage">
             </ng-template>
           </div>
           <div class="workoutgroupsinnderdivs">
-            <ng-template [ngIf]="this.getImageToShow()[2]">
-              <img [src]="this.getImageToShow()[2].image" class="img-thumbnail previewImage">
+            <ng-template [ngIf]="this.previewImages[2]">
+              <img [src]="this.previewImages[2].image" class="img-thumbnail previewImage">
             </ng-template>
           </div>
           <div class="workoutgroupsinnderdivs">
-            <ng-template [ngIf]="this.getImageToShow()[3]">
-              <img [src]="this.getImageToShow()[3].image" class="img-thumbnail previewImage">
+            <ng-template [ngIf]="this.previewImages[3]">
+              <img [src]="this.previewImages[3].image" class="img-thumbnail previewImage">
             </ng-template>
           </div>
         </div>
