--- a/src/app/features/workoutoverview/workoutoverview.component.html
+++ b/src/app/features/workoutoverview/workoutoverview.component.html
@@ -10,6 +10,7 @@
           <img alt="home" src="../../../assets/pictures/gym1.png">
         </div>
       </a>
+      <a routerLink="workout" [queryParams]="{criteria: '[]'}">link to all workouts</a>
       <a class="groupBox" routerLink="workout">
         <div class="workoutgroups">
           <div class="groupTextHolder">
