--- a/src/app/features/new-workout/workout-description/workout-description.component.html
+++ b/src/app/features/new-workout/workout-description/workout-description.component.html
@@ -1,7 +1,6 @@
-<p>workout-description works!</p>
-
+<div class = "input-frame">
 <label>
-  <input class="day-button-input" type="text" placeholder="hallo du" [(ngModel)]="this.workoutTitle">
+  <input class="day-button-input" type="text" placeholder="workout name" [(ngModel)]="this.workoutTitle">
 </label>
-
-<button class="upload-button" (click)="this.upload()"></button>
+</div>
+<button class="upload-button" (click)="this.upload()">Upload workout</button>
