--- a/src/app/features/new-workout/new-workout.component.css
+++ b/src/app/features/new-workout/new-workout.component.css
@@ -2,48 +2,57 @@
   margin-top: 50px;
   display: flex;
   width: 100%;
-  height: 50px;
-  border: solid black 2px;
+  height: 70px;
+
 }
 
 .post-type-image {
   margin: 0px;
   padding: 0px;
-  height: 100%;
+
+  width: auto;
 }
 
 .workout-post-image {
-  margin-left: 50px;
+  height: 35px;
 }
 
 .simple-post-image {
-  float: right;
-  margin-right: 50px;
+  margin-top: 7px;
+  margin-bottom: 3px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40px;
 }
 
 .workout-post-frame {
-  width: 50%;
+  display: flex;
+  flex-direction: column;
+  width: 10%;
+  margin-left: 10%;
+  cursor: pointer;
 }
 
 .simple-post-frame {
-  width: 50%;
+  display: flex;
+  flex-direction: column;
+  width: 10%;
+  margin-left: 35%;
+  cursor: pointer;
 }
 
 .post-creation-wrapper {
-  border: solid black 1px;
+
 }
 
 .formWrapper {
-
+  margin-top: 50px;
 }
 
 .file-input-image-landscape {
   height: 100%;
   width: auto;
-}
-.file-input-image-portrait {
-  width: 100%;
-  height: auto;
+
 }
 #file-input-wrapper {
   border: 1px solid black;
@@ -51,6 +60,7 @@
   max-width: 500px;
   height: 400px;
   overflow: hidden;
+  background-color: #099FDF;
 }
 
 #file-input {
@@ -73,10 +83,11 @@
 }
 
 .workout-data-creation-wrapper {
+  margin-top: 20px;
   width: 100%;
-
   border: black solid 1px;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 500px;
   display: flex;
   flex-direction: column;
@@ -94,22 +105,30 @@
 }
 
 .add-button {
+  /*
   background-image: url(
   '../../../assets/pictures/menuButtons/menuPlus.svg');
+   */
+  margin-top: 5px;
   background-size: cover;
-  width: 40px;
-  height: 40px;
+  width: 80px;
+  height: 30px;
   background-color: Transparent;
   background-repeat: no-repeat;
   cursor: pointer;
   overflow: hidden;
   outline: none;
-  border: none;
+  border: 1px solid black;
+  border-radius: 5px;
+  border-style: dashed;
+
 }
 
 .day-button {
+  margin-right: 20px;
+  margin-top: 5px;
   width: 80px;
-  height: 40px;
+  height: 30px;
   cursor: pointer;
   overflow: hidden;
   border-radius: 6px;
@@ -131,7 +150,6 @@
   border-top: black 1px dashed;
   border-left: black 1px dashed;
   border-right: black 1px dashed;
-  margin-top: 20px;
   margin-top: 20px;
 }
 .phase-top-Bar-dotted-2 {
@@ -155,6 +173,7 @@
   flex-direction: column;
 }
 .phase-top-Bar {
+  margin-top: 20px;
   height: 15px;
   width: 100%;
   background-color: #111110;
@@ -173,4 +192,24 @@
   width: 300px;
   overflow: visible;
   border-bottom: solid black 1px;
+}
+.next-button {
+
+  background-color: #030c03;
+  border-radius: 5px;
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 15px;
+  width: 80px;
+}
+.next-button-wrapper {
+  height: 50px;
+  width: 100%;
+  text-align: center;
 }
