--- a/src/app/features/new-workout/new-workout.component.html
+++ b/src/app/features/new-workout/new-workout.component.html
@@ -4,81 +4,64 @@
   <div class="content-div">
     <div class="post-type-frame">
       <div class="simple-post-frame">
-        <img class="post-type-image simple-post-image" src="../../../assets/pictures/menuButtons/menuPlus.svg">
+        <img class="post-type-image simple-post-image" src="../../../assets/pictures/menuButtons/workoutCreation/simple-post.svg">
+        <p class="text-center"> simple post</p>
       </div>
       <div class="workout-post-frame">
         <img class="post-type-image workout-post-image" src="../../../assets/pictures/menuButtons/dumbbell.svg">
+        <p class="text-center"> workout </p>
       </div>
     </div>
     <div class="post-creation-wrapper">
       <div class="formWrapper">
-
-        <div id="file-input-wrapper">
+        <div #fileInputWrapper id="file-input-wrapper">
           <label class="file-input-default-image-label" *ngIf="!this.url" for="file-input">
             <img class="file-input-default-image" src="../../../assets/pictures/menuButtons/pictureIconBlack.svg"/>
           </label>
           <input id="file-input" type="file" (change)="selectFile($event)"/>
-          <img id="file-input-image" class="file-input-image-landscape" *ngIf="this.url" [src]="this.url" cdkDrag
+          <img #inputImage class="file-input-image-landscape" *ngIf="this.url" [src]="this.url" cdkDrag
                (cdkDragEnded)="this.dragTheImage($event)" appSetImageSize [cdkDragFreeDragPosition]="dragPosition">
         </div>
 
         <div class="workout-data-creation-wrapper">
-
           <div class="days-bar">
             <button class="day-button" (click)="setSelectedDay(i)" *ngFor="let day of this.days; index as i;">
               <input class="day-button-input" type="text" placeholder="{{day.name}}">
             </button>
-            <button class="add-button" (click)="this.addDay()"></button>
-
+            <button class="add-button" (click)="this.addDay()">New Day</button>
           </div>
+
           <div *ngIf="this.days[this.selectedDay]">
             <div *ngFor="let phase of this.days[this.selectedDay].phases; index as i" class="phase-container">
               <div class="phase-top-Bar">
               </div>
               <div class="exercises-container">
-                <button class="add-button margin-center" (click)="this.goToExerciseSelector(i);"></button>
-                <p class="text-center">Add Exercise</p>
+
                 <div *ngIf="this.days[this.selectedDay].phases[i]">
                   <div class="single-exercise-container" *ngFor="let exercise of this.days[this.selectedDay].phases[i].exercises">
                   <p class="text-center" >
                     {{exercise.name}}</p>
                   </div>
                 </div>
-
-
+                <button class="add-button margin-center" (click)="this.goToExerciseSelector(i);">Exercise</button>
               </div>
-
             </div>
           </div>
           <div *ngIf="this.days[this.selectedDay]" class="phase-top-Bar-dotted-1">
             <div class="phase-top-Bar-dotted-2">
-              <button class="add-button margin-center" (click)="this.addPhase()"></button>
-              <p class="text-center">Add Phase</p>
+              <button class="add-button margin-center" (click)="this.addPhase()">Phase</button>
             </div>
           </div>
 
         </div>
-
-
-        <button class="btn btn-success" [disabled]="!selectedFiles" (click)="upload()">
-          Upload
-        </button>
-
-        <div class="alert alert-light" role="alert">{{ message }}</div>
-
-        <div class="card">
-          <div class="card-header">List of Files</div>
-          <ul
-            class="list-group list-group-flush"
-            *ngFor="let file of fileInfos | async"
-          >
-            <li class="list-group-item">
-              <a href="{{ file.url }}">{{ file.name }}</a>
-            </li>
-          </ul>
+        <div class = "next-button-wrapper">
+          <button class="next-button" [disabled]="!this.saveWorkoutService.file" (click)="upload()">
+            Create
+          </button>
         </div>
       </div>
 
     </div>
   </div>
 </div>
+<canvas style="border: 1px solid black" #canvas></canvas>
