--- a/src/app/features/workout-list/workout.component.css
+++ b/src/app/features/workout-list/workout.component.css
@@ -46,14 +46,22 @@ h4 {
 }
 .toggleImageStyle {
   max-height: 20px;
+  margin-top: 25px;
   float: right;
   cursor: pointer;
 }
 .expandButtonWrapper {
   width: 100%;
-  height: 20px;
+  height: 45px;
 }
 .workoutsContainer {
   padding-top: 50px;
   padding-bottom: 50px;
+}
+.like-button-image {
+  max-height: 40px;
+  max-width: 40px;
+  margin-left: 10px;
+  float: left;
+  cursor: pointer;
 }
