--- a/src/app/features/new-workout/new-workout.component.html
+++ b/src/app/features/new-workout/new-workout.component.html
@@ -16,11 +16,14 @@
       <div class="formWrapper">
         <div #fileInputWrapper id="file-input-wrapper">
           <label class="file-input-default-image-label" *ngIf="!this.url" for="file-input">
-            <img class="file-input-default-image" src="../../../assets/pictures/menuButtons/pictureIconBlack.svg"/>
+            <img class="file-input-default-image" src="../../../assets/pictures/menuButtons/workoutCreation/pictureIconBlack.svg"/>
           </label>
-          <input id="file-input" type="file" (change)="selectFile($event)"/>
+          <input #fileInput id="file-input" type="file" (change)="selectFile($event)"/>
+
+          <img *ngIf="this.url" (click)="this.removeImage()" class="close-cross-for-picture" src="../../../assets/pictures/menuButtons/workoutCreation/close-button.svg"/>
           <img #inputImage class="file-input-image-landscape" *ngIf="this.url" [src]="this.url" cdkDrag
-               (cdkDragEnded)="this.dragTheImage($event)" appSetImageSize [cdkDragFreeDragPosition]="dragPosition" (load)="this.canvasDrawing()">
+               (cdkDragEnded)="this.dragTheImage($event)" appSetImageSize [cdkDragFreeDragPosition]="dragPosition.toCdkDragFreeDragPosition()" (load)="this.canvasDrawing()">
+
         </div>
 
         <div class="workout-data-creation-wrapper">
