--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -25,7 +25,7 @@
           <a class="d-inline-block  nav-link-menu" routerLink="" routerLinkActive="active">
             <img class="link-images" alt="home" src="../../../assets/pictures/menuButtons/menuFriends.svg">
           </a>
-          <a class="d-inline-block  nav-link-menu" routerLink="" routerLinkActive="active">
+          <a class="d-inline-block  nav-link-menu" routerLink="/content-creation" routerLinkActive="active">
             <img class="link-images" alt="home" src="../../../assets/pictures/menuButtons/menuPlus.svg">
           </a>
       </div>
