new Player features

--- a/src/app/features/workout-player/current-set/current-set.component.css
+++ b/src/app/features/workout-player/current-set/current-set.component.css
@@ -11,7 +11,7 @@
   margin-right: auto;
   margin-left: auto;
   width: 60px;
-  height: 35px;
+  height: 45px;
 }
 .removeEntryButton {
   margin: auto auto auto 20px;
@@ -25,8 +25,14 @@
   width: 45px;
 }
 .controlButtonImage {
-  background-color: white;
+  width: 30px;
+}
+.quantityControlButtonImage {
   width: 100%;
+}
+.quantityDownButtonImage {
+}
+.quantityUpButtonImage {
 }
 
 
@@ -48,7 +54,10 @@ input::-webkit-inner-spin-button {
   width: 60px;
   font-size: 30px;
   text-align: center;
-  border: 1px solid black;
+  outline:none;
+  background: transparent;
+  border: none;
+  color: white;
 }
 .inputFieldsRowWrapperEntryColumn {
   height: 100%;
@@ -82,4 +91,5 @@ input::-webkit-inner-spin-button {
   font-size: 30px;
   width: 80%;
   height: 50px;
+  color: white;
 }
