--- a/src/app/features/workout-player/last-set/last-set.component.css
+++ b/src/app/features/workout-player/last-set/last-set.component.css
@@ -13,8 +13,11 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
+  height: 20%;
+}
+.chart {
+  height: calc(80% - 20px);
 }
 .singleSetsContainer {
-  margin-left: 20px;
-  margin-right: 20px;
+
 }
