--- a/src/app/features/workout-player/tables.component.css
+++ b/src/app/features/workout-player/tables.component.css
@@ -1,7 +1,6 @@
 
 .content-div-common {
   margin-top: 50px;
-  background-color: #099FDF;
   position: relative;
 }
 .video {
@@ -16,9 +15,10 @@
   left: 0;
   display: flex;
   flex-direction: column;
-  height: calc(100% - 160px);
-  width: 100%;
+  /*height: calc(100% - 160px);
+  width: 100%;*/
   border: solid black 1px;
+  background-color: #111110;
 
 }
 .exerciseTitleWrapper {
@@ -29,6 +29,7 @@
   padding: 0;
 }
 .exerciseTitle {
+  color: white;
   margin: auto auto auto auto;
 }
 .tableContainer {
@@ -63,7 +64,12 @@
   padding: 0;
   margin: 0;
 }
-
+.lastTwoSetsContainer {
+  position: absolute;
+  background-color: #0e1013;
+  display: flex;
+  height: 100px;
+}
 @media (max-width: 767px) {
   .content-div-media-specific {
     width: 100%;
@@ -79,11 +85,13 @@
     width:0;
   }
   .nextButton {
+    color: white;
     display: inline;
     cursor: pointer;
     margin-left: 100px;
   }
   .endButton {
+    color: white;
     display: inline;
     float: right;
     margin-right: 100px;
@@ -114,11 +122,13 @@
     width: 100%;
   }
   .nextButton {
+    color: white;
     display: inline;
     cursor: pointer;
     margin-left: calc(50% + 100px);
   }
   .endButton {
+    color: white;
     display: inline;
     float: right;
     margin-right: 100px;
@@ -132,11 +142,7 @@
     width: 100%;
     height: calc(100% - 45px);
     align-items: center;
-    background-color: chartreuse;
     /*background-color: RGB(250, 250, 250);*/
-  }
-  video {
-  filter:brightness(40%);
   }
 }
 
